@@ -75,6 +75,8 @@ Version 1.7.8
 - BUG: Issue #359: out of memory exception
        in commit dialog. (Stefan)
 - BUG: Issue #360: Crash using blocks. (Stefan)
+- BUG: Issue #361: merge log messages not
+       generated for 'record only' merges. (Stefan)
 
 Version 1.7.7
 - BUG: Issue #233: Crash when closing the
